# ctt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sensor-characterisation.md
.github/workflows/: ci.yml  publish.yml
apps/ctt-server/ctt_server/: __init__.py  __main__.py  app.py  camera.py  colour_check.py  ctt_runner.py  naming.py  results.py  sessions.py
apps/ctt-server/ctt_server/static/: app.css  app.js
apps/ctt-server/ctt_server/templates/: _project_tabs.html  base.html  capture.html  images.html  index.html  preview.html  projects.html  results.html  run.html  tuning.html
apps/ctt/ctt/: __init__.py  __main__.py  ctt.py
apps/ctt/ctt/algorithms/: alsc.py  awb.py  black_level.py  ccm.py  gamma_check.py  lux.py  noise.py
apps/ctt/ctt/core/: camera.py  image.py  image_loader.py  runner.py
apps/ctt/ctt/data/: config_example.json
apps/ctt/ctt/detection/: patches.py
apps/ctt/ctt/devices/: __init__.py  __main__.py  lightbox.py  lightbox_cli.py  registry.py
apps/ctt/ctt/devices/lightstudio_s/: __init__.py  device.py
apps/ctt/ctt/utils/: colorspace.py  tools.py
apps/ctt_cli/: __init__.py  __main__.py  cli.py
apps/ctt_server/: __main__.py  app.py  auto_capture.py  auto_characterise.py  camera.py  characterise.py  ctt_runner.py  mtf.py  sessions.py
apps/ctt_server/static/: app.css  app.js  fonts.css
apps/ctt_server/templates/: _project_tabs.html  base.html  capture.html  characterisation.html  images.html  mtf.html  preview.html  projects.html  results.html  run.html  tuning.html
ctt/: ctt.py
ctt/algorithms/: alsc.py  awb.py  base.py  cac.py  ccm.py  geq.py  lux.py  noise.py
ctt/characterisation/: __init__.py  discover.py  frames.py  ptc.py  stats.py
ctt/core/: camera.py  image_loader.py  runner.py
ctt/data/: pisp_template.json  vc4_template.json
ctt/detection/: dots.py  macbeth.py  patches.py  ransac.py
ctt/output/: converter.py  json_formatter.py  visualise.py
ctt/utils/: colorspace.py  errors.py  tools.py
devices/: __init__.py  lightbox.py  lightbox_cli.py  lightmeter.py  lightmeter_cli.py  registry.py
devices/cl70f/: __init__.py  device.py  protocol.py  transport.py
devices/cl70f/contrib/: 99-cl70f.rules
devices/lightstudio_s/: __init__.py  device.py
devices/lightstudio_s/contrib/: 99-lightstudio.rules
docs/: ctt-cli.md  ctt-server.md  developers.md  device-control.md  installation.md
scripts/: compare_with_old_ctt.py
tests/: test_alsc.py  test_black_level.py  test_burst.py  test_characterisation.py  test_characterisation_discover.py  test_characterise_sweep.py  test_core.py  test_ctt_server_auto_capture.py  test_ctt_server_auto_characterise.py  test_ctt_server_blacklevel.py  test_ctt_server_capture.py  test_ctt_server_characterise.py  test_ctt_server_colour_check.py  test_ctt_server_images.py  test_ctt_server_lightbox.py  test_ctt_server_lightmeter.py  test_ctt_server_macbeth.py  test_ctt_server_mtf.py  test_ctt_server_naming.py  test_ctt_server_preview.py  test_ctt_server_results.py  test_ctt_server_runner.py  test_ctt_server_sessions.py  test_ctt_server_tuning.py  test_detection.py  test_devices_cl70f.py  test_devices_lightbox.py  test_devices_lightmeter.py  test_devices_lightstudio.py  test_gamma_check.py  test_output.py  test_utils.py
