[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-ctt"
version = "1.0.0"
description = "Raspberry Pi Camera Tuning Tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "BSD-2-Clause"
authors = [{ name = "Raspberry Pi" }]
dependencies = [
    "colour-science>=0.4.7",
    "matplotlib>=3.10",
    "numpy>=2.4,<3",
    "opencv-python>=4.13",
    "Pillow>=12.1",
    "exifread>=3.0",
    "rawpy>=0.26",
    "scikit-learn>=1.8",
    "scipy>=1.17",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
ctt = "ctt.ctt:main"

[tool.setuptools.packages.find]
include = ["ctt*"]

[tool.setuptools.package-data]
"ctt.data" = ["*.pgm", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "single"
