[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-ctt"
version = "1.1.0"
description = "Raspberry Pi Camera Tuning Tool"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "BSD-2-Clause"
authors = [{ name = "Raspberry Pi" }]
dependencies = [
    "colour-science>=0.4.7",
    "matplotlib>=3.10",
    "numpy>=2.4,<3",
    "opencv-python>=4.13",
    "Pillow>=12.1",
    "exifread>=3.0",
    "rawpy>=0.26",
    "scikit-learn>=1.8",
    "scipy>=1.17",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
# ctt-server web frontend (web UI + in-process capture + CTT). Lives in apps/ctt-server.
# Runs on the Raspberry Pi; picamera2 is a system package (ships with Pi OS), imported
# lazily, so it is intentionally not a pip dependency here.
server = ["flask>=3.0"]
# Optional: control a USB lightbox (e.g. Image Engineering lightSTUDIO-S) from the
# Pi. pyusb is lazy-imported so core CTT is unaffected; also needs a libusb backend
# (sudo apt install libusb-1.0-0). See apps/ctt/ctt/devices/.
devices = ["pyusb>=1.2"]

[project.scripts]
ctt = "ctt.ctt:main"
# ctt-server web UI (Flask). See README.md.
ctt-server = "ctt_server.__main__:main"
# Lightbox control CLI. See apps/ctt/ctt/devices/.
ctt-lightbox = "ctt.devices.__main__:main"

[tool.setuptools.packages.find]
# Discover the ctt CLI under apps/ctt and the web app under apps/ctt-server.
where = ["apps/ctt", "apps/ctt-server"]
include = ["ctt*", "ctt_server*"]

[tool.setuptools.package-data]
"ctt.data" = ["*.pgm", "*.json"]
"ctt.devices.lightstudio_s" = ["contrib/*.rules"]
"ctt_server" = ["templates/*.html", "static/*", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
# First-party source roots (the apps live under apps/), so import sorting keeps
# ctt / ctt_server grouped as first-party.
src = ["apps/ctt", "apps/ctt-server"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "single"
